# server/router/deploy_project.go
@@ -9,6 +9,7 @@ import (
 func InitDeployProjectRouter(Router *gin.RouterGroup) {
 	ApiRouter := Router.Group("deploy/project").Use(middleware.JWTAuth()).Use(middleware.CasbinHandler())
 	{
-		ApiRouter.POST("projectList", v1.ProjectList) //   项目列表
+		ApiRouter.POST("projectList", v1.ProjectList)     //   项目列表
+		ApiRouter.POST("projectCreate", v1.ProjectCreate) // 项目创建
 	}
 }
