# server/service/deploy_project.go
@@ -1,6 +1,7 @@
 package service
 
 import (
+	"errors"
 	"gin-vue-admin/global"
 	"gin-vue-admin/model"
 	"gin-vue-admin/model/request"
@@ -22,4 +23,21 @@ func ProjectList(info request.PageInfo) (err error, list interface{}, total int)
 	err = db.Count(&total).Error
 	err = db.Limit(limit).Offset(offset).Find(&projectList).Error
 	return err, projectList, total
+}
+
+// @title    ProjectCreate
+// @description   create base project, 新增项目
+// @auth                     （2020/07/07  17:56）
+// @param     api             model.ResourceServer
+// @return                    error
+
+func ProjectCreate(project model.DeployProject) (err error) {
+	findOne := global.GVA_DB.Where("name = ?", project.Name).Find(&model.DeployProject{}).Error
+	if findOne == nil {
+		return errors.New("存在相同项目")
+	} else {
+		project.ReleaseVersion = 0.1
+		err = global.GVA_DB.Create(&project).Error
+	}
+	return err
 }
